# pokedox

./: Pokemon.db  README.md  pokemon.html  pokemon.py  pokemon2.py  pyproject.toml
test/: test_pokemon.py
