[project]
name = "pokedox"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauan Lopes",email = "kauanlopes2706@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
